--- a/app/src/main/res/layout/statistics_include_card_stats_card_scroll.xml
+++ b/app/src/main/res/layout/statistics_include_card_stats_card_scroll.xml
@@ -9,10 +9,10 @@
     android:alpha=".9"
     app:cardBackgroundColor="@color/backgroundDefaultColor"
     app:layout_constrainedHeight="true"
-    app:layout_constraintBottom_toBottomOf="@+id/card_image_view_stones"
-    app:layout_constraintLeft_toLeftOf="@+id/card_image_view_stones"
-    app:layout_constraintRight_toRightOf="@+id/card_image_view_stones"
-    app:layout_constraintTop_toTopOf="@+id/card_image_view_stones"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
     tools:showIn="@layout/content_statistics">
 
     <ScrollView
