--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,7 +43,7 @@
         <item name="android:layout_weight">1</item>
         <item name="android:layout_margin">@dimen/default_activity_margin</item>
         <item name="android:textSize">60sp</item>
-        <item name="android:onClick">make_move</item>
+        <item name="android:onClick">takeTurn</item>
     </style>
 
     <style name="board_row_style">
