--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,12 +37,21 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="board_button_style">
+    <style name="board_button_style_portrait">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
         <item name="android:layout_margin">@dimen/default_activity_margin</item>
         <item name="android:textSize">60sp</item>
+        <item name="android:onClick">takeTurn</item>
+    </style>
+
+    <style name="board_button_style_land">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_margin">@dimen/slim_margin</item>
+        <item name="android:textSize">30sp</item>
         <item name="android:onClick">takeTurn</item>
     </style>
 
